JVMTI.agent_load dcmd should show useful error message

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: core-svc
    • None
    • 9
    • b138

      If we try to attach invalid JVMTI agent via JVMTI.agent_load dcmd, we will get "Command executed successfully". However, it implies error in JVMTIAgentLoadDCmd.

      This message is from JCmd.java when jcmd does not receive output from target VM. So we should send error message from JVMTIAgentLoadDCmd.

            Assignee:
            Yasumasa Suenaga
            Reporter:
            Yasumasa Suenaga
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: