8164913: JVMTI.agent_load dcmd should show useful error message

Show useful error message

Reviewed-by: dholmes, dsamersoff, sspitsyn